# ros_gpu_stereo_processor

./: .clang-format  CMakeLists.txt  README.rst  package.xml
cfg/: GPU.cfg
include/gpuimageproc/: ConnectedTopics.h  GPUStereoProcessor.h  GpuSender.h  GpuSenderDisparity.h  GpuSenderIfc.h  GpuSenderImage.h  GpuSenderPc2.h  StereoProcessor.h  StereoProcessorNodelet.h  gpu_sender.h  gpustereoprocessor.h  stereoproc.h  stereoprocnodelet.h
launch/: gpu_image_processor.launch  play_bag.launch  ros_cpu_stereo_processing.launch  rviz.rviz  test.launch  test_node.launch  test_nodelet.launch
plugins/: nodelet_plugins.xml
src/: GPUStereoProcessor.cpp  GpuSender.cpp  GpuSenderDisparity.cpp  GpuSenderIfc.cpp  GpuSenderImage.cpp  GpuSenderPc2.cpp  StereoProcessor.cpp  StereoProcessorNode.cpp  StereoProcessorNodelet.cpp  gpustereoprocessor.cpp  stereo_proc_node.cpp  stereoproc.cpp  stereoprocnodelet.cpp
test/: CMakeLists.txt  UTest.cpp  utest.cpp
test/stereobm/: euroc_left_scale_0.yaml  euroc_left_scale_100.yaml  euroc_right_scale_0.yaml  euroc_right_scale_100.yaml  left_info.yaml  right_info.yaml
test/stereobm/test_data/: left.yaml  right.yaml
